--- a/report/index.html
+++ b/report/index.html
@@ -1,1 +1,15 @@
-<p>https://github.com/bereis01/rpsl_web</p>
+<!DOCTYPE html>
+<html>
+<head>
+<style>.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
+}
+</style>
+</head>
+<body><p style="text-align: center">Commit distribution</p>
+<img src="./assets/0.png" style="width:400px;height:300px;" class="center" >
+</body>
+</html>
