Improved html module a bit

--- a/report/index.html
+++ b/report/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>.center {
-display: block;
-margin-left: auto;
-margin-right: auto;
-width: 50%;
-}
-</style>
+    <style>
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+    </style>
 </head>
-<body><p style="text-align: center">Commit distribution</p>
-<img src="./assets/0.png" style="width:400px;height:300px;" class="center" >
+
+<body>
+    <p align="center">
+        <img src="../assets/gitruck_logo.png" width="250" height="250">
+    </p>
+    <p align="center"><a style="font-size:40px">Your truck factor is...</a><a
+            style="font-size:50px;color:yellow;text-shadow:2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;">1</a>
+    </p>
 </body>
+
 </html>
