--- a/report/index.html
+++ b/report/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <style>
-        .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 50%;
-        }
-    </style>
+<style>.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
+}
+</style>
 </head>
-
-<body>
-    <p align="center">
-        <img src="../assets/gitruck_logo.png" width="250" height="250">
-    </p>
-    <p align="center"><a style="font-size:40px">Your truck factor is...</a><a
-            style="font-size:50px;color:yellow;text-shadow:2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;">1</a>
-    </p>
-</body>
-
+<body><p style="margin-bottom:0px;" align="center">
+<img src="../assets/gitruck_logo.png" width="250" height="250">
+</p><p style="margin-top:0px;" align="center"><a style="font-size:40px">Your truck factor is...</a><a style="font-size:50px;color:#F4C524;text-shadow:2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;">33</a></p><p align="center"><a style="font-size:25px">These are the most important devs:</a></br><img src="./assets/0.png" width="800.0" height="400.0"></p></body>
 </html>
